# docs/swagger.yaml
@@ -65,6 +65,10 @@ definitions:
         type: integer
       is_active:
         type: boolean
+      role:
+        $ref: '#/definitions/store.Role'
+      role_id:
+        type: integer
       token:
         type: string
       username:
@@ -141,6 +145,17 @@ definitions:
       version:
         type: integer
     type: object
+  store.Role:
+    properties:
+      description:
+        type: string
+      id:
+        type: integer
+      level:
+        type: integer
+      name:
+        type: string
+    type: object
   store.User:
     properties:
       created_at:
@@ -151,6 +166,10 @@ definitions:
         type: integer
       is_active:
         type: boolean
+      role:
+        $ref: '#/definitions/store.Role'
+      role_id:
+        type: integer
       username:
         type: string
     type: object
@@ -289,15 +308,14 @@ paths:
           description: No Content
           schema:
             type: string
-        "400":
-          description: Bad Request
-          schema: {}
         "404":
           description: Not Found
           schema: {}
         "500":
           description: Internal Server Error
           schema: {}
+      security:
+      - ApiKeyAuth: []
       summary: Delete post
       tags:
       - posts
@@ -329,7 +347,7 @@ paths:
       summary: Fetch post
       tags:
       - posts
-    put:
+    patch:
       consumes:
       - application/json
       description: Update post by ID
